Added age recommendation to API and display on API though retrieved event constants
