# api/lib/Model/Event.php
@@ -29,7 +29,7 @@ class Event implements ModelInterface
 {
     private const MODEL_SCHEMA = <<<'SCHEMA'
 {
-  "required" : [ "category", "conventionId", "duration", "game", "gm", "id", "maxplayers" ],
+  "required" : [ "ages", "category", "conventionId", "duration", "game", "gm", "id", "maxplayers" ],
   "type" : "object",
   "properties" : {
     "id" : {
@@ -115,6 +115,11 @@ class Event implements ModelInterface
     "table" : {
       "type" : "string"
     },
+    "ages" : {
+      "type" : "integer",
+      "description" : "the minimum age recommended by the gamemaster (7,13,18,19/Mature)",
+      "format" : "int32"
+    },
     "cost" : {
       "type" : "number",
       "description" : "Price of event ticket",
@@ -192,6 +197,9 @@ SCHEMA;
 
     /** @var string $table */
     public $table;
+
+    /** @var int $ages the minimum age recommended by the gamemaster (7,13,18,19/Mature)*/
+    public $ages;
 
     /** @var float $cost Price of event ticket*/
     public $cost;
